--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
     "@react-email/render": "latest",
+    "@reduxjs/toolkit": "^2.9.0",
     "@supabase/supabase-js": "latest",
     "@vercel/analytics": "1.3.1",
     "autoprefixer": "^10.4.20",
@@ -64,6 +65,7 @@
     "react-dom": "^19",
     "react-hook-form": "^7.54.1",
     "react-intersection-observer": "latest",
+    "react-redux": "^9.2.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
     "resend": "latest",
