feat: integrate react-toastify for improved user notifications in AdminDashboard

--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react-intersection-observer": "latest",
     "react-redux": "^9.2.0",
     "react-resizable-panels": "^2.1.7",
+    "react-toastify": "^11.0.5",
     "recharts": "2.15.0",
     "resend": "latest",
     "sharp": "latest",
